Fix header elements alignment

--- a/css/profile.css
+++ b/css/profile.css
@@ -3,7 +3,7 @@ header {
   display: flex;  
   align-items: center;
   justify-content: space-between;
-  padding-top: 20px;
+  padding-top: 10px;
   padding-right: 20px;
   padding-left: 20px;
   background: rgba(255, 255, 255, 0);
@@ -12,9 +12,6 @@ header {
 
 #head-logo {
   width: 25%;
-  height: 10%;
-  margin-left: -40px !important;
-  margin-top: -2%;
 }
 
 #head-redirect
